Update readme and name

--- a/site/index.html
+++ b/site/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>RTS</title>
+    <title>Ephemeris</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script data-main="app" src="js/lib/require.js"></script>
   </head>
